set articleCard's max-width

--- a/styles/components/organisms/articleCard.module.sass
+++ b/styles/components/organisms/articleCard.module.sass
@@ -5,6 +5,7 @@
   border-radius: 5px
   overflow: hidden
   box-shadow: 0px 24px 64px 0px #161B2D0D
+  max-width: 32rem
 
   &:hover
     text-decoration: none
