implement search bar

--- a/styles/variables.sass
+++ b/styles/variables.sass
@@ -11,6 +11,8 @@
   --color-gray-400: #9facc6
   --color-gray-500: #abbcd5
   --color-gray-600: #869ab8
+  --color-gray-700: #6e84a3
+  --color-gray-900: #506690
   --color-gray-medium: #506690
 
   --color-accent-blue: #335eea
