--- a/styles/mixins.sass
+++ b/styles/mixins.sass
@@ -16,6 +16,10 @@
     @media screen and (min-width: 640px)
       @content
   
+  @if $breakpoint == 720p
+    @media screen and (min-width: 720px)
+      @content
+  
   @if $breakpoint == 960p
     @media screen and (min-width: 960px)
       @content
