add margin-block-end to ArticlesGrid

--- a/styles/components/organisms/articlesGrid.module.sass
+++ b/styles/components/organisms/articlesGrid.module.sass
@@ -2,4 +2,5 @@
   background: var(--color-background)
   display: grid
   grid-template-columns: repeat(auto-fit, minmax(28rem, 1fr))
-  grid-gap: 4rem
+  gap: 4rem
+  margin-block-end: 8rem
