--- a/styles/components/organisms/articlesGrid.module.sass
+++ b/styles/components/organisms/articlesGrid.module.sass
@@ -1,6 +1,7 @@
 .container
   background: var(--color-background)
   display: grid
-  grid-template-columns: repeat(auto-fit, minmax(28rem, 1fr))
+  grid-template-columns: repeat(auto-fill, 28rem)
   gap: 4rem
+  justify-content: center
   margin-block-end: 8rem
