--- a/styles/variables.sass
+++ b/styles/variables.sass
@@ -8,6 +8,7 @@
   
   --color-black: #161b2d
 
+  --color-gray-300: #d9e2ef
   --color-gray-400: #9facc6
   --color-gray-500: #abbcd5
   --color-gray-600: #869ab8
